--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
+matplotlib==3.5.2
+numpy==1.22.4
 pandas==1.4.2
-streamlit==1.9.2
+prettytable==3.3.0
+scipy==1.8.1
+seaborn==0.11.2
+statsmodels==0.13.2
+sklearn==0.0
+streamlit==1.10.0
 streamlit-authenticator==0.1.5
+tabulate==0.8.9
